Licensing, cleaning, and deprecation fixes

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ subprojects { Project subProject ->
     tasks.build {
         dependsOn tasks.updateLicenses
         dependsOn tasks.shadowJar
+        finalizedBy tasks.clean
     }
 
     shadowJar {
