Update shading structure and provide NMS to S112

--- a/gradle.properties
+++ b/gradle.properties
@@ -57,3 +57,6 @@ flashLibsVersion=0.1.2
 ### SQL Module
 jooqVersion=3.14.3
 xerialSqliteJdbcVersion=3.32.3.2
+## Mappings
+minecraftMappings112=20171003-1.12
+minecraftForge112=1.12.2-14.23.5.2854
