Add XPP3 and KXML versions to Gradle properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -41,6 +41,8 @@ hamcrestVersion=2.0.0.0
 configurateVersion=4.0.0
 xstreamVersion=1.4.15
 woodstoxVersion=6.2.3
+xmlPullParserVersion=1.1.4c
+kxmlVersion=2.3.0
 gsonXmlVersion=0.1.7
 ## Sponge API7
 ### Platforms
