Add test run configurations

--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,7 @@ allprojects {
             testImplementation "com.sk89q.worldedit:worldedit-core:$worldEditCoreVersion"
             testImplementation "com.plotsquared:plotsquared-api:$plotSquaredVersion"
             testImplementation "com.google.inject:guice:$guiceVersion"
+            testImplementation "com.google.guava:guava:$guavaVersion"
         }
 
         test {
