--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,7 @@ worldEditCoreVersion=6.1
 jetbrainsAnnotationsVersion=19.0.0
 ### Internal
 guiceVersion=4.2.2
+guavaVersion=20.0
 slf4jVersion=1.7.25
 ### Other
 plotSquaredVersion=3.1
