Update and rename main.yml to prerelease.yml

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -20,7 +20,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Prerelease ${{ github.ref }}
+          release_name: Prerelease Selene-${{ github.event.pull_request.number }}
           body: |
-            # Prerelease of ${{ github.event.pull_request.number }}
-            **Author:** ${{ github.event.pull_request.sender }}
+            This is a automatically created pre-release for pull request #${{ github.event.pull_request.number }}
+            **Author:** ${{ github.event.sender }}
