--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -24,3 +24,4 @@ jobs:
           body: |
             This is a automatically created pre-release for pull request #${{ github.event.pull_request.number }}
             **Author:** ${{ github.event.sender }}
+          prerelease: true
