Add dependencies for image utils

--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,9 @@ allprojects {
                 exclude module: 'opus-java'
             }
 
+            compile group: 'com.mortennobel', name: 'java-image-scaling', version: '0.8.6'
+            compile group: 'com.jhlabs', name: 'filters', version: '2.0.235-1'
+
             // Required plugins for all platforms
             compileOnly "com.boydti:fawe-api:$faweVersion"
             compileOnly "com.sk89q.worldedit:worldedit-core:$worldEditCoreVersion"
