--- a/gradle.properties
+++ b/gradle.properties
@@ -54,7 +54,7 @@ luckPermsVersion=4.4
 magiBridgeVersion=2.10
 multiChatVersion=1.8.1
 worldEditSpongeVersion=6.1.7-SNAPSHOT
-nucleusApiVersion=1.14.3-SNAPSHOT-S7.1
+nucleusApiVersion=1.14.3
 flashLibsVersion=0.1.2
 ## Modules
 ### SQL Module
