--- a/modules/dave/build.gradle
+++ b/modules/dave/build.gradle
@@ -1,1 +1,1 @@
-description = 'An automatic chatbot which watches multiple chat channels for message to reply to automatically'
+description 'An automatic chatbot which watches multiple chat channels for message to reply to automatically'
