--- a/selene-core/build.gradle
+++ b/selene-core/build.gradle
@@ -33,8 +33,8 @@ repositories {
 }
 
 archivesBaseName = 'core'
-group = project.pluginGroup
-description = 'Common API for Selene modules'
+group project.pluginGroup
+description 'Common API for Selene modules'
 def date = LocalDate.now().toString()
 
 dependencies {
