--- a/sponge-7/build.gradle
+++ b/sponge-7/build.gradle
@@ -35,8 +35,8 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle'
 
 archivesBaseName = 'selene-sponge-api7'
-group = project.pluginGroup
-description = 'Sponge API7.x implementation for Selene'
+group project.pluginGroup
+description 'Sponge API7.x implementation for Selene'
 sponge.plugin.id = pluginId
 def date = LocalDate.now().toString()
 
