Update to updated Sponge repo and fix imports

--- a/sponge-8/build.gradle
+++ b/sponge-8/build.gradle
@@ -45,7 +45,7 @@ minecraft {
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo-new.spongepowered.org/repository/maven-public/' }
+    maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
 }
 
 dependencies {
