Provide Selene instance during provision testing

--- a/modules/build.gradle
+++ b/modules/build.gradle
@@ -34,6 +34,8 @@ subprojects { Project subProject ->
             exclude group: "org.spongepowered", module: "configurate**"
         }
 
+
+        testCompile(testFixtures(project(":selene-common")))
     }
 
 }
