Fix JDA mismatching

--- a/selene-nms-1.12/build.gradle
+++ b/selene-nms-1.12/build.gradle
@@ -38,7 +38,7 @@ minecraft {
 }
 
 repositories {
-    maven { url 'http://repo.drnaylor.co.uk/artifactory/list/minecraft' }
+    maven { url 'https://repo.drnaylor.co.uk/artifactory/list/minecraft' }
     maven { url 'https://jitpack.io' }
 }
 
