--- a/.github/workflows/test-complete.yml
+++ b/.github/workflows/test-complete.yml
@@ -3,10 +3,8 @@ name: Tests
 on: [pull_request]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
