Extract exception types and relocate tests

--- a/selene-tasks/build.gradle
+++ b/selene-tasks/build.gradle
@@ -16,5 +16,6 @@
  */
 
 dependencies {
-    compileOnly(project(':selene-core'))
+    compileOnly(project(':selene-parent'))
+    testImplementation(project(':selene-parent'))
 }
