--- a/selene-persistence-configurate/build.gradle
+++ b/selene-persistence-configurate/build.gradle
@@ -16,13 +16,12 @@
  */
 
 dependencies {
-    compileOnly(project(':selene-parent'))
+    compileOnly project(':selene-parent')
 
-    compileOnly(project(':selene-events'))
-    compileOnly(project(':selene-modules'))
-    compileOnly(project(':selene-persistence'))
-    compileOnly(project(':selene-entities'))
-    compileOnly(project(':selene-i18n'))
+    compileOnly project(':selene-events')
+    compileOnly project(':selene-modules')
+    compileOnly project(':selene-persistence')
+    compileOnly project(':selene-i18n')
 
     compile "org.spongepowered:configurate-core:$configurateVersion"
     compile "org.spongepowered:configurate-hocon:$configurateVersion"
@@ -31,5 +30,7 @@ dependencies {
     compile "org.spongepowered:configurate-gson:$configurateVersion"
     compile "org.spongepowered:configurate-xml:$configurateVersion"
 
+    testImplementation project(':selene-parent')
+    testImplementation project(':selene-i18n')
     testImplementation "org.spongepowered:configurate-core:$configurateVersion"
 }
