--- a/selene-commands/build.gradle
+++ b/selene-commands/build.gradle
@@ -16,12 +16,19 @@
  */
 
 dependencies {
-    compileOnly(project(':selene-parent'))
+    compileOnly project(':selene-parent')
+    compileOnly project(':selene-bootstrap')
 
     compile project(':selene-keys')
     compile project(':selene-persistence')
 
-    compileOnly(project(':selene-i18n'))
-    compileOnly(project(':selene-events'))
-    compileOnly(project(':selene-exceptions'))
+    compileOnly project(':selene-modules')
+    compileOnly project(':selene-i18n')
+    compileOnly project(':selene-events')
+
+    testImplementation project(':selene-parent')
+    testImplementation project(':selene-bootstrap')
+    testImplementation project(':selene-modules')
+    testImplementation project(':selene-i18n')
+    testImplementation project(':selene-events')
 }
