Extract exception controllers and separate from utils

--- a/selene-exceptions/build.gradle
+++ b/selene-exceptions/build.gradle
@@ -16,5 +16,6 @@
  */
 
 dependencies {
-    compileOnly(project(':selene-parent'))
+    compileOnly(project(':selene-core'))
+    compileOnly(project(':selene-di'))
 }
