--- a/selene-nms-1.12/build.gradle
+++ b/selene-nms-1.12/build.gradle
@@ -46,8 +46,7 @@ dependencies {
     minecraft "net.minecraftforge:forge:${minecraftForge112}"
     compileOnly project(':selene-parent')
     compileOnly project(':selene-keys')
-    compileOnly project(':selene-minecraft-server:minecraft-packets')
-    compileOnly project(':selene-minecraft-server:minecraft-entities')
+    compileOnly project(':selene-minecraft-server')
 }
 
 shadowJar {
